--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
   "builds": [{ "src": "./app.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "routes": [
+    { "handle": "filesystem" },
+    {
+      "src": "/.*",
+      "dest": "/app.js"
+    }
+  ]
 }
