--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,7 +4,7 @@
   "routes": [
     { "handle": "filesystem" },
     {
-      "src": "/api/v1/auth*",
+      "src": "/.*",
       "dest": "/app.js"
     }
   ]
